[package]
name = "k9"
version = "0.12.0"
authors = ["Aaron Abramov <aaron@abramov.io>"]
edition = "2018"
description = "rust testing library"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/aaronabramov/k9"
exclude = ["tests/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["regex"]

[dependencies]
colored = "2"
diff = "0.1"
lazy_static = "1.5"
libc = "0.2"
proc-macro2 = { version = "1.0", default-features = false, features = [
    "span-locations",
] }
regex = { version = "1.3", optional = true }
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
terminal_size = "0.4"
anyhow = "1.0"

[dev-dependencies]
rand = "0.9"
sha2 = "0.10"
strip-ansi-escapes = "0.2"
derive_builder = "0.20"
k9_stable = { version = "0.12.0", package = "k9" }
